added run options just in case it didn't work